<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_undo"
        android:icon="@drawable/ic_undo"
        android:title="@string/undo_transaction"
        android:contentDescription="@string/undo_transaction"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_history"
        android:icon="@drawable/ic_book"
        android:title="@string/ops_history_title"
        android:contentDescription="@string/ops_history_title"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_custom_buttons"
        android:title="@string/custom_buttons"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_management"
        android:title="@string/card_management"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_advanced_settings"
        android:title="@string/advanced_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:title="@string/about"
        app:showAsAction="never" />

</menu>
